6:
- Mention qBittorrent

5:
- Rename add-on

4:
- Mention Radarr

3:
- Mention Deluge

2:
- Fix datadir

1:
- Initial add-on